test/errors/wav-invalid/wav-invalid.rom
Error in `wav-invalid.asm` on line 1: `wav-invalid.txt` is not a WAV
